working on grids using flexbox

--- a/index.html
+++ b/index.html
@@ -17,17 +17,26 @@
 <body>
 	<div class="page-content">
 		<div class="container">
-			<h1>Local Weather</h1>
-			
-			<div class="Grid ">
-				
-				<div class="large-Grid--full" id="grid-one">
-					<h2 id="loading">Loading....</h2>
+
+
+			<div class="Grid">
+				<div class="grid-header">
+					<div class="mini-grid">
+						<div class="header-div ">
+						<h1>TWITCH STREAMERS</h1>
+						</div>
+						<div class="header-buttons-div">
+							<button>All</button>
+							<button>Online</button>
+							<button>Offline</button>
+						</div>
+					</div>
 				</div>
-				<div class="large-Grid--full" id="grid-two">
-					
-				</div>
-			</div>
+				<div class="grid-items">
+					<h2>content</h2>
+				</div <div class="grid-items">
+				<h2>content</h2>
+			</div </div>
 			<div id="weather"></div>
 		</div>
 		<!--close container-->
