--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="grid-items">
-					<h2>content</h2>
-				</div <div class="grid-items">
-				<h2>content</h2>
-			</div </div>
+			</div>
 			<div id="weather"></div>
 		</div>
 		<!--close container-->
