working with API output

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Local Weather</title>
-	<meta name="JavaScript Project" content="Wikipedia Viewer">
-	<meta name="Sara C" content="Local Weather">
+	<meta name="JavaScript Project" content="Twitch API Viewer">
+	<meta name="Sara C" content="Twitch API Viewer">
 	<link rel="stylesheet" href="css/styles.css">
 	<!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -33,7 +33,6 @@
 					</div>
 				</div>
 			</div>
-			<div id="weather"></div>
 		</div>
 		<!--close container-->
 	</div>
