--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Local Weather</title>
+	<title>Twitch API Viewer</title>
 	<meta name="JavaScript Project" content="Twitch API Viewer">
 	<meta name="Sara C" content="Twitch API Viewer">
 	<link rel="stylesheet" href="css/styles.css">
