change to styles

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 						<h1>TWITCH STREAMERS</h1>
 						</div>
 						<div class="header-buttons-div">
-							<button>All</button>
-							<button>Online</button>
-							<button>Offline</button>
+							<button id="all">All</button>
+							<button id="online">Online</button>
+							<button id="offline">Offline</button>
 						</div>
 					</div>
 				</div>
